Fix #226: covers in playlist panel have an unwanted bottom margin

--- a/theme/musicco.css
+++ b/theme/musicco.css
@@ -1054,6 +1054,7 @@
 	.playlist-poster {
 		max-width: 100px;
 		max-height: 100px;
+		border: 1px solid var(--background-subtle);
 	}
 
 	#shared-album-cover,
@@ -1307,7 +1308,7 @@
 
 	.playlist-poster-container {
 		width: 100px;
-		border: 1px solid var(--background-subtle);
+		height: 100px;
 	}
 
 	#big-volume-bar {
@@ -1881,6 +1882,7 @@
 
 		.playlist-poster-container {
 			width: 85px;
+			height: 85px;
 		}
 
 		.playlist-poster {
